# tutorial-pytorch-prof

./: .gitignore  README.md  pyproject.toml  pytorch_conda_env.yaml
0_PyTorch_distributed/: README.md  sbatch_pytorch.sh
1_1gpu/: README.md  sbatch.sh
1_1gpu/solution/: answer.md  sbatch.sh
2_nvidia-smi/: README.md  answer.md  sbatch.sh
2_nvidia-smi/solution/: answer.md  sbatch.sh  train.py
3_mfu/: README.md  sbatch.sh  train_solution.py
3_mfu/solution/: answer.md  sbatch.sh  train.py
4_profile/: README.md  analysis.ipynb  analysis_mem_usage.ipynb  sbatch.sh  train.py  train_solution.py
4_profile/solution/part_a/: sbatch.sh  train.py
4_profile/solution/part_b/: sbatch.sh  train.py
5_nsight/: README.md  sbatch.sh  train.py  train_solution.py
5_nsight/solution/: launch.py  sbatch.sh  train.py
