[project]
name = "pytorch-prof-tutorial"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "torch==2.9.0",
    "torchvision",
    "transformers",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }